# geo_location_provider

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_ES.md  AGENTS_JA.md  README.md  README_ES.md  README_JA.md  README_JP.md  gradle.properties  local.default.properties  settings.gradle.kts
app/: README.md  README_ES.md  README_JP.md  build.gradle.kts
app/schemas/com.mapconductor.plugin.provider.geolocation.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  drive_uploader.cpp  sample.cpp
app/src/main/java/com/mapconductor/plugin/provider/geolocation/: App.kt  AppDatabase.kt  (+32 more)
app/src/main/res/values/: strings.xml  themes.xml
auth-appauth/: README.md  README_ES.md  README_JP.md  build.gradle.kts
auth-credentialmanager/: README.md  README_ES.md  README_JP.md  build.gradle.kts
core/: README.md  README_ES.md  README_JP.md  build.gradle.kts
datamanager/: README.md  README_ES.md  README_JP.md  build.gradle.kts
dataselector/: .gitignore  README.md  README_ES.md  README_JP.md  build.gradle.kts
dataselector/src/main/res/values/: strings.xml
dataselector/src/main/res/values-night/: themes.xml
deadreckoning/: README.md  README_ES.md  README_JP.md  build.gradle.kts
deadreckoning/src/main/: AndroidManifest.xml
deadreckoning/src/main/res/values/: themes.xml
gps/: README.md  README_ES.md  README_JP.md  build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
storageservice/: README.md  README_ES.md  README_JP.md  build.gradle.kts
storageservice/src/main/res/values/: strings.xml
(+171 files in other folders)
